TUI testing/ratatui-console/tests/snapshots/snapshots__first_run_narrow_compact_warm.snap
---
source: tests/snapshots.rs
expression: "normalized_render(80, 24, & state)"
---
┌Vesper v20 - Authentication───────────────────────────────────────────────────┐
│V20 CONSOLE FIRST RUN                                                         │
│Create console password.                                                      │
│Password:                                                                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
