TUI testing/ratatui-console/tests/snapshots/snapshots__first_run_wide_large_charcoal.snap
---
source: tests/snapshots.rs
expression: "normalized_render(120, 36, & state)"
---
┌Vesper v20 - Authentication───────────────────────────────────────────────────────────────────────────────────────────┐
│V20 CONSOLE FIRST RUN                                                                                                 │
│Create console password.                                                                                              │
│Password:                                                                                                             │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
