TUI testing/ratatui-console/tests/snapshots/snapshots__locked_narrow_standard_charcoal.snap
---
source: tests/snapshots.rs
expression: "normalized_render(80, 24, & state)"
---
┌Vesper v20 - Authentication───────────────────────────────────────────────────┐
│V20 CONSOLE LOCKED                                                            │
│Authentication required. Dashboard hidden until unlock.                       │
│Password:                                                                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
