TUI testing/ratatui-console/tests/snapshots/snapshots__locked_wide_compact_warm.snap
---
source: tests/snapshots.rs
expression: "normalized_render(120, 36, & state)"
---
┌Vesper v20 - Authentication───────────────────────────────────────────────────────────────────────────────────────────┐
│V20 CONSOLE LOCKED                                                                                                    │
│Authentication required. Dashboard hidden until unlock.                                                               │
│Password:                                                                                                             │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
