TUI testing/ratatui-console/tests/snapshots/snapshots__resolved_wide_standard_charcoal.snap
---
source: tests/snapshots.rs
expression: "normalized_render(120, 36, & state)"
---
┌RUNTIME & MARKET - CONTROLLER─────────────────────────────────────────────────────────────────────────────────────────┐
│MODE UNKNOWN / UNAVAILABLE | DATA UNAVAILABLE | AGE UNAVAILABLE                                                       │
│TIME 2026-01-15 07:34:56 EST | MARKET Closed                                                                          │
│REGIME UNAVAILABLE | CONFIDENCE UNAVAILABLE | PORTFOLIO UNAVAILABLE                                                   │
│REBALANCE UNAVAILABLE | BLOCKERS UNAVAILABLE                                                                          │
│ALERTS NONE / OPEN 0 | AGENT UNAVAILABLE | QWEN UNAVAILABLE                                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌NAVIGATION────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│[1 Impact] | 2 Portfolio | 3 Orders | 4 Agents | 5 Models & Regime | 6 Timeline | 7 Risk & Approvals | 8 Data &       │
│Evidence | 9 Memory | 0 System                                                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ALERTS────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│[OK] RESOLVED - Issue repaired.                                                                                       │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌HOLDINGS────────────────────────────────────────────────────────────────────┐┌IMPACT FEED─────────────────────────────┐
│  Symbol             Current            Proposed          Approved          ││[>] ACTIVE 2026-08-02 20:00:00 EDT  AAPL│
│  AAPL               10.00%             11.00%            -                 ││review started                          │
│                                                                            ││                                        │
│                                                                            ││                                        │
│                                                                            ││                                        │
│                                                                            ││                                        │
│                                                                            ││                                        │
│                                                                            │└────────────────────────────────────────┘
│                                                                            │┌AGENT WORK──────────────────────────────┐
│                                                                            ││Agent      Task            Stage    P   │
│                                                                            ││[ ] portfo Review AAPL     RUNNING  10  │
│                                                                            ││                                        │
│                                                                            ││                                        │
└────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────┘
┌AGENT INPUT - DISABLED────────────────────────────────────────────────────────────────────────────────────────────────┐
│UNAVAILABLE - Agent input is not connected to the controller yet.                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌KEYS & STATUS─────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Up/Down Holdings | o Open | q Close | f Filter                                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
