TUI testing/ratatui-console/tests/snapshots/snapshots__viewer_narrow_standard_warm.snap
---
source: tests/snapshots.rs
expression: "normalized_render(80, 24, & state)"
---
┌RUNTIME & MARKET - READ ONLY──────────────────────────────────────────────────┐
│MODE UNKNOWN / UNAVAILABLE | DATA UNAVAILABLE | AGE UNAVAILABLE               │
│TIME UNAVAILABLE - Eastern time unavailable | MARKET UNAVAILABLE              │
│REGIME UNAVAILABLE | CONFIDENCE UNAVAILABLE | PORTFOLIO UNAVAILABLE           │
│REBALANCE UNAVAILABLE | BLOCKERS UNAVAILABLE                                  │
│ALERTS UNAVAILABLE | AGENT UNAVAILABLE | QWEN UNAVAILABLE                     │
└──────────────────────────────────────────────────────────────────────────────┘
┌NAVIGATION────────────────────────────────────────────────────────────────────┐
│[1 Imp] | 2 Port | 3 Ord | 4 Agt | 5 Mod | 6 Time | 7 Risk | 8 Data | 9 Mem | │
│0 Sys                                                                         │
└──────────────────────────────────────────────────────────────────────────────┘
┌ALERTS────────────────────────────────────────────────────────────────────────┐
│[?] ALERTS UNAVAILABLE                                                        │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌SCREEN: Impact────────────────────────────────────────────────────────────────┐
│UNAVAILABLE - Controller snapshot has not arrived.                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌AGENT INPUT - DISABLED────────────────────────────────────────────────────────┐
│UNAVAILABLE - Phase 1 provides the secure console shell only.                 │
└──────────────────────────────────────────────────────────────────────────────┘
┌KEYS & STATUS─────────────────────────────────────────────────────────────────┐
│1-9,0 Screens | q Close TUI only | Phase 1 secure shell                       │
└──────────────────────────────────────────────────────────────────────────────┘
